tests/ui/issues/issue-48276.stderr
error[E0207]: the lifetime parameter `'b` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-48276.rs:10:10
   |
LL | impl<'a, 'b> MyFrom<A> for &'a str {
   |          ^^ unconstrained lifetime parameter

error[E0185]: method `from` has a `&self` declaration in the impl, but not in the trait
  --> $DIR/issue-48276.rs:20:5
   |
LL |     fn from(&self) -> B {
   |     ^^^^^^^^^^^^^^^^^^^ `&self` used in impl
   |
   = note: `from` from trait: `fn(T) -> Self`

error[E0185]: method `from` has a `&self` declaration in the impl, but not in the trait
  --> $DIR/issue-48276.rs:27:5
   |
LL |     fn from(&self) -> &'static str {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&self` used in impl
   |
   = note: `from` from trait: `fn(T) -> Self`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0185, E0207.
For more information about an error, try `rustc --explain E0185`.
